--- a/index.html
+++ b/index.html
@@ -335,8 +335,7 @@
                 
                 <div class="max-w-4xl mx-auto grid grid-cols-1 md:grid-cols-3 gap-6">
                     <!-- Email Card -->
-                    <a href="mailto:Maureen@arpit869.onmicrosoft.com
-" class="p-6 bg-card/50 backdrop-blur-sm rounded-xl border border-themed hover:bg-accent group transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl flex flex-col items-center justify-center">
+                    <a href="mailto:Maureen@arpit869.onmicrosoft.com" class="p-6 bg-card/50 backdrop-blur-sm rounded-xl border border-themed hover:bg-accent group transition-all duration-300 transform hover:-translate-y-2 hover:shadow-2xl flex flex-col items-center justify-center">
                         <svg class="w-10 h-10 mb-3 text-accent group-hover:text-white transition-colors" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path></svg>
                         <h3 class="font-bold text-lg text-heading group-hover:text-white transition-colors">Email Me</h3>
                         <p class="text-sm text-muted group-hover:text-emerald-200 transition-colors">Maureen@arpit869.onmicrosoft.com
